Added Chat Feedback and fixed some Warnings