@@ -2,34 +2,42 @@ package de.thecoolcraft11;
 
 import com.google.gson.JsonObject;
 import net.minecraft.client.texture.NativeImage;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.io.*;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 
 import static de.thecoolcraft11.ScreenshotUploader.getConfig;
 
+
 public class ScreenshotUpload {
 
+    private static final Logger logger = LoggerFactory.getLogger(ScreenshotUpload.class);
     private static final JsonObject config = getConfig();
 
-    public static void uploadScreenshot(NativeImage nativeImage, String jsonData) {
-
+    public static JsonObject uploadScreenshot(NativeImage nativeImage, String jsonData) {
         File tempFile;
+        JsonObject result = new JsonObject();
+
         try {
             tempFile = File.createTempFile("screenshot", ".png");
             nativeImage.writeTo(tempFile);
         } catch (IOException e) {
-            e.printStackTrace();
-            return;
+            logger.error("Failed to create temporary file for screenshot", e);
+            result.addProperty("status", "error");
+            result.addProperty("message", "Failed to create temporary file.");
+            return result;
         }
 
         try {
             String boundary = Long.toHexString(System.currentTimeMillis());
             String CRLF = "\r\n";
 
-            HttpURLConnection conn = (HttpURLConnection) new URL(config.get("upload_url").getAsString()).openConnection();
+            URI uploadUri = URI.create(config.get("upload_url").getAsString());
+            HttpURLConnection conn = (HttpURLConnection) uploadUri.toURL().openConnection();
             conn.setDoOutput(true);
             conn.setRequestMethod("POST");
             conn.setRequestProperty("Content-Type", "multipart/form-data; boundary=" + boundary);
@@ -37,9 +45,9 @@ public class ScreenshotUpload {
             try (OutputStream os = conn.getOutputStream();
                  PrintWriter writer = new PrintWriter(new OutputStreamWriter(os, StandardCharsets.UTF_8))) {
 
-                writer.append("--" + boundary).append(CRLF);
-                writer.append("Content-Disposition: form-data; name=\"file\"; filename=\"" + tempFile.getName() + "\"").append(CRLF);
-                writer.append("Content-Type: " + HttpURLConnection.guessContentTypeFromName(tempFile.getName())).append(CRLF);
+                writer.append(String.format("--%s", boundary)).append(CRLF);
+                writer.append(String.format("Content-Disposition: form-data; name=\"file\"; filename=\"%s\"", tempFile.getName())).append(CRLF);
+                writer.append(String.format("Content-Type: %s", HttpURLConnection.guessContentTypeFromName(tempFile.getName()))).append(CRLF);
                 writer.append(CRLF).flush();
 
                 try (FileInputStream fis = new FileInputStream(tempFile)) {
@@ -53,8 +61,7 @@ public class ScreenshotUpload {
                 os.flush();
                 writer.append(CRLF).flush();
 
-
-                writer.append("--" + boundary).append(CRLF);
+                writer.append(String.format("--%s", boundary)).append(CRLF);
                 writer.append("Content-Disposition: form-data; name=\"jsonData\"").append(CRLF);
                 writer.append("Content-Type: application/json").append(CRLF);
                 writer.append(CRLF).flush();
@@ -62,23 +69,39 @@ public class ScreenshotUpload {
                 writer.append(jsonData).flush();
                 writer.append(CRLF).flush();
 
-                writer.append("--" + boundary + "--").append(CRLF).flush();
+                // End of the request
+                writer.append(String.format("--%s--", boundary)).append(CRLF).flush();
             }
 
+            // Handle response
             int responseCode = conn.getResponseCode();
             String responseMessage = conn.getResponseMessage();
+
             if (responseCode == HttpURLConnection.HTTP_OK) {
-                System.out.println("Screenshot uploaded successfully.");
+                InputStream responseStream = conn.getInputStream();
+                String responseBody = new BufferedReader(new InputStreamReader(responseStream))
+                        .lines()
+                        .reduce("", (acc, line) -> acc + line);
+
+                result.addProperty("status", "success");
+                result.addProperty("responseCode", responseCode);
+                result.addProperty("responseBody", responseBody);
             } else {
-                System.out.println("Failed to upload screenshot. Response code: " + responseCode + ": " + responseMessage);
+                result.addProperty("status", "error");
+                result.addProperty("responseCode", responseCode);
+                result.addProperty("message", responseMessage);
             }
 
         } catch (IOException e) {
-            e.printStackTrace();
+            logger.error("IOException occurred while uploading screenshot", e);
+            result.addProperty("status", "error");
+            result.addProperty("message", e.getMessage());
         } finally {
-            if (tempFile.exists()) {
-                tempFile.delete();
+            if (tempFile.exists() && !tempFile.delete()) {
+                logger.warn("Failed to delete temporary file: {}", tempFile.getAbsolutePath());
             }
         }
+
+        return result;
     }
 }
